# brightr

./: Cargo.toml  README.mkdn
examples/: brightr.rs
src/: lib.rs  main.rs
