[package]
name = "brightr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
logind-zbus = "4.0.2"
thiserror = "1.0.58"
zbus = { version = "4.1.2", default-features = false, features = ["blocking"] }
