[package]
name = "brightr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logind-zbus = "4.0.2"
thiserror = "1.0.58"
zbus = { version = "4.1.2", default-features = false, features = ["blocking"] }

[dev-dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
env_logger = "0.11.3"
log = "0.4.21"

[lints.rust]
elided_lifetimes_in_paths = "deny"
missing_debug_implementations = "deny"
missing_docs = "deny"
unsafe_code = "forbid"
